--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "docs": "node build/build.js",
-    "docs:serve": "cd docs/ && ws --port 8080 --rewrite '/best-resume-ever/* -> /$1'",
+    "docs:serve": "cd docs/ && ws --port 9080 --rewrite '/best-resume-ever/* -> /$1'",
     "dev": "node build/dev-server.js",
     "predev": "check-node-version --node \">= 8.0.0\"",
     "start": "node build/dev-server.js",
@@ -85,7 +85,7 @@
     "pdf-image": "1.1.0",
     "postcss": "6.0.13",
     "postcss-cssnext": "3.0.2",
-    "puppeteer": "0.12.0",
+    "puppeteer": "^0.12.0",
     "rename": "1.0.4",
     "request": "2.83.0",
     "request-promise": "4.2.2",
